// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render properly 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 48px;
  font-family: inherit;
  font-weight: 700;
  line-height: 1;
  margin-bottom: 0;
  margin-top: 8px;
}

.c0:first-child {
  margin-top: 0;
}

<h1
  class="c0"
>
  Far far away
</h1>
`;

exports[`Heading with \`as\` 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 26px;
  font-family: inherit;
  font-weight: 700;
  line-height: 1;
  margin-bottom: 0;
  margin-top: 8px;
}

.c0:first-child {
  margin-top: 0;
}

<h4
  class="c0"
>
  Far far away
</h4>
`;

exports[`Heading with \`gutter\` 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 48px;
  font-family: inherit;
  font-weight: 700;
  line-height: 1;
  margin-bottom: 16px;
  margin-top: 8px;
}

.c0:first-child {
  margin-top: 0;
}

<h1
  class="c0"
>
  Far far away
</h1>
`;

exports[`Heading with \`level\` 1`] = `
.c0 {
  box-sizing: border-box;
  font-size: 26px;
  font-family: inherit;
  font-weight: 700;
  line-height: 1;
  margin-bottom: 0;
  margin-top: 8px;
}

.c0:first-child {
  margin-top: 0;
}

<h1
  class="c0"
>
  Far far away
</h1>
`;
